--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div id="dash" class="wrapper" />
-    <script src="./build/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
