add last updated timestamp

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 
 <body>
-    <div id="dash" class="wrapper" />
+    <div id="dash" class="wrapper"> </div>
+    <div>
+        <pre id="timestamp"></pre>
+    </div>
+
     <script src="./dist/bundle.js"></script>
 </body>
 
