--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-    <title>Cryptocurrency Dash</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="main.css" rel="stylesheet" type="text/css">
+    <title>Cryptocurrency Dash</title>
 </head>
 
 <body>
