use maquette.js for dom rendering

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div id="dash" class="wrapper"> </div>
+    <div id="dash"> </div>
     <div>
         <pre id="timestamp"></pre>
     </div>
